==> SmartThingsCommunity/st-device-sdk-c/src/port/bsp/rtl8720c/iot_bsp_wifi_rtl8720c.c <==
#include <lwip_netconf.h>
#include <wifi_constants.h>
#include <wifi_structures.h>
#include <iot_bsp_wifi.h>
#include "iot_os_util.h"
#include "freertos_service.h"
#include "wifi_conf.h"
#include "lwip/ip_addr.h"
#include "iot_debug.h"
#include "apps/sntp.h"

iot_error_t iot_bsp_wifi_init()
{
	if (wifi_init_status == e_wifi_init) {
		IOT_INFO("wifi is already initialized, returning");
		return IOT_ERROR_NONE;
	}
#if CONFIG_INIT_NET
#if CONFIG_LWIP_LAYER
	/* Initilaize the LwIP stack */
	LwIP_Init();//it will set the ip auto
#endif
#endif
#if CONFIG_WIFI_IND_USE_THREAD
	wifi_manager_init();
#endif
	if (_iot_bsp_wifi_on(IOT_WIFI_MODE_STATION) < 0) {
		IOT_ERROR("wifi_on failed");
		return IOT_ERROR_INIT_FAIL;
	}
	wifi_set_autoreconnect(1);

	wifi_init_status = e_wifi_init;
	return IOT_ERROR_NONE;
}

iot_error_t iot_bsp_wifi_set_mode(iot_wifi_conf *conf)
{
	int str_len = 0;
	int timeout = 20;
	iot_error_t ret = IOT_ERROR_NONE;
	time_t now;
	struct tm timeinfo;
	struct ip_addr ipaddr;
	struct ip_addr netmask;
	struct ip_addr gw;
	struct netif *pnetif = &xnetif[0];

	rtw_network_info_t wifi_config = {0};

	str_len = strlen(conf->ssid);
	memcpy(wifi_config.ssid.val, conf->ssid, str_len);
	if (str_len < IOT_WIFI_MAX_SSID_LEN)
		wifi_config.ssid.val[str_len] = '\0';

	str_len =  strlen(conf->pass);

	wifi_config.ssid.len = strlen(conf->ssid);
	rtw_security_t security_type = RTW_SECURITY_WPA2_AES_PSK;
	if (str_len == 0) {
		security_type = RTW_SECURITY_OPEN;
	} else {
		wifi_config.password = (char *) malloc(sizeof(char) * str_len + 1);
		memcpy(wifi_config.password, conf->pass, str_len);
		if (str_len < IOT_WIFI_MAX_PASS_LEN)
			wifi_config.password[str_len] = '\0';
	}
	wifi_config.security_type = security_type;

	switch (conf->mode) {
	case IOT_WIFI_MODE_OFF:
		if (rtw_mode != RTW_MODE_NONE) {
			if (RTW_ERROR == _iot_bsp_wifi_off()) {
				ret = IOT_ERROR_CONN_OPERATE_FAIL;
				goto out;
			}
			vTaskDelay(20);
		}
		if (RTW_ERROR == _iot_bsp_wifi_on(IOT_WIFI_MODE_OFF)) {
			ret = IOT_ERROR_CONN_OPERATE_FAIL;
			goto out;
		}
		wifi_set_autoreconnect(0);
	break;
	case IOT_WIFI_MODE_SCAN:
		if (rtw_mode == RTW_MODE_NONE) {
			IOT_ERROR("Scan could perform on both STA or SOFTAP mode, but current mode is NONE.");
			ret = IOT_ERROR_CONN_OPERATE_FAIL;
			goto out;
		}
	break;
	case IOT_WIFI_MODE_STATION:
		if (rtw_mode != RTW_MODE_STA) {
			if (RTW_ERROR == _iot_bsp_wifi_off()) {
				ret = IOT_ERROR_CONN_OPERATE_FAIL;
				goto out;
			}
			vTaskDelay(20);
		}

		if (RTW_ERROR == _iot_bsp_wifi_on(IOT_WIFI_MODE_STATION)) {
				ret = IOT_ERROR_CONN_OPERATE_FAIL;
				goto out;
		}

		wifi_set_autoreconnect(0);

		u8 ap_channel = 0;
		for (int i = 0; i < 5; i++) {
			if(0 !=	_get_ap_security_mode(wifi_config.ssid.val, &(wifi_config.security_type), &ap_channel))
				break;
			IOT_INFO("Connect failed, No. %d try!", i);
		}

		wifi_set_autoreconnect(1);
		int keyindex = 0;
		/*NOTE: keyindex is for web auth mode, in other mode keyindex will not take effect*/
		/*Known issue: We checked in our AP, if keyindex >0,
				DHCP will failed, and we check with android phone and our pc, they are
				are same issue.*/
		for (keyindex = 0; keyindex < 4; keyindex++) {
			wifi_config.key_id = keyindex;
			if (wifi_connect(wifi_config.ssid.val, wifi_config.security_type,
				wifi_config.password, strlen(wifi_config.ssid.val),
				strlen(wifi_config.password), wifi_config.key_id, NULL) == RTW_SUCCESS) {
					LwIP_DHCP(0, DHCP_START);
					int rssi = 0;
					wifi_get_rssi(&rssi);
					IOT_INFO("The RSSI: %d", rssi);
					break;
			} else {
				if (RTW_SECURITY_WEP_PSK == wifi_config.security_type
					|| RTW_SECURITY_WEP_SHARED == wifi_config.security_type) {
					IOT_INFO("keyindex %d wifi connect to ap %s failed, ap secruity mode: %d",
						keyindex,
						wifi_config.ssid.val, wifi_config.security_type);
				} else {
					IOT_ERROR("keyindex %d wifi connect to ap %s failed, ap secruity mode: %d",
						keyindex,
						wifi_config.ssid.val, wifi_config.security_type);
					break;
				}
			}
		}

		time(&now);
		localtime_r(&now, &timeinfo);

		if (timeinfo.tm_year < (2016 - 1900)) {
			IOT_INFO("Time is not set yet. Connecting to WiFi and getting time over NTP.");
			_obtain_time();
		}

	break;
	case IOT_WIFI_MODE_SOFTAP:
		dhcps_deinit();
		IP4_ADDR(&ipaddr, 192, 168, 4, 1);
		IP4_ADDR(&netmask, 255, 255 , 255, 0);
		IP4_ADDR(&gw, 192, 168, 4, 1);
		netif_set_addr(pnetif, &ipaddr, &netmask, &gw);
#ifdef CONFIG_DONT_CARE_TP
		pnetif->flags |= NETIF_FLAG_IPSWITCH;
#endif
		///enable wifi ap mode
		if (RTW_ERROR == _iot_bsp_wifi_off()) {
			ret = IOT_ERROR_CONN_OPERATE_FAIL;
			goto out;
		}
		vTaskDelay(20);
		if(_iot_bsp_wifi_on(IOT_WIFI_MODE_SOFTAP) < 0) {
			IOT_ERROR("wifi_on failed");
			ret = IOT_ERROR_CONN_OPERATE_FAIL;
			goto out;
		}

		wifi_set_autoreconnect(0);
		int channel = 6;	//#define SOFTAP_CHANNEL 6
		if (wifi_start_ap(wifi_config.ssid.val, wifi_config.security_type, wifi_config.password, strlen(wifi_config.ssid.val), strlen(wifi_config.password), channel) < 0) {
			IOT_ERROR("[WLAN_SCENARIO_EXAMPLE] ERROR: wifi_start_ap failed");
			ret = IOT_ERROR_CONN_OPERATE_FAIL;
			goto out;
		}
		while (1) {
			char essid[33];

			if (wext_get_ssid(WLAN0_NAME, (unsigned char *)essid) > 0) {
				if (strcmp((const char *)essid, (const char *)wifi_config.ssid.val) == 0) {
					IOT_INFO("%s started", wifi_config.ssid.val);
					break;
				}
			}

			if (timeout == 0) {
				IOT_ERROR("ERROR: Start AP timeout!");
				ret = IOT_ERROR_CONN_OPERATE_FAIL;
				break;
			}

			vTaskDelay(1 * configTICK_RATE_HZ);
			timeout --;
		}
		dhcps_init(pnetif);
		break;
	default:
		break;
	}
out:
	if (wifi_config.password) {
		free(wifi_config.password);
		wifi_config.password = NULL;
	}
	return ret;
}

uint16_t iot_bsp_wifi_get_scan_result(iot_wifi_scan_result_t *scan_result)
{
	int len = 0;
	int ret = 0;

	struct wifi_scan_result inic_scan_buf;
	rtw_init_sema(&(inic_scan_buf.scan_sema), 0);
	if(inic_scan_buf.scan_sema == NULL)
		return RTW_ERROR;

	inic_scan_buf.scan_result = scan_result;
	inic_scan_buf.len = 0;

	if ((ret = wifi_scan_networks(app_scan_result_handler, &inic_scan_buf)) != RTW_SUCCESS) {
		return IOT_ERROR_CONNECT_FAIL;
	}
	if (rtw_down_timeout_sema(&inic_scan_buf.scan_sema, SCAN_LONGEST_WAIT_TIME) == RTW_FALSE) {
		IOT_INFO("WPS scan done early!");
	}
	len = inic_scan_buf.len;
	return len;
}

iot_error_t iot_bsp_wifi_get_mac(struct iot_mac *wifi_mac)
{
	iot_error_t ret;
	char mac_addr[32];
	ret = wifi_get_mac_address(mac_addr);
	if (ret != RTW_SUCCESS) {
		IOT_ERROR("failed to read wifi mac address : %d", ret);
		return IOT_ERROR_CONN_OPERATE_FAIL;
	}

	int i = 0;
	for (i = 0; i < 6; i++) {
		int j = i * 3;
		wifi_mac->addr[i] = transfer_ascii_to_hex(mac_addr[j]) * 0x10 + transfer_ascii_to_hex(mac_addr[j + 1]);
	}
	IOT_DEBUG("MAC:%02X-%02X-%02X-%02X-%02X-%02X",
		wifi_mac->addr[0], wifi_mac->addr[1], wifi_mac->addr[2], wifi_mac->addr[3], wifi_mac->addr[4], wifi_mac->addr[5]);
	return IOT_ERROR_NONE;
}
